--- a/package.json
+++ b/package.json
@@ -35,16 +35,22 @@
     "@nx/jest": "19.1.0",
     "@nx/js": "19.1.0",
     "@nx/playwright": "19.1.0",
+    "@nx/vite": "19.1.0",
+    "@nx/web": "19.1.0",
+    "@nx/webpack": "19.1.0",
     "@nx/workspace": "19.1.0",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~18.0.0",
     "@swc-node/register": "~1.8.0",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
+    "@swc/jest": "0.2.20",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
+    "@vitest/ui": "^1.3.1",
     "esbuild": "^0.19.2",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
@@ -53,10 +59,15 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~14.1.0",
+    "jsdom": "~22.1.0",
     "nx": "19.1.0",
     "prettier": "^2.6.2",
+    "swc-loader": "0.1.15",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "vite": "~5.0.0",
+    "vitest": "^1.3.1",
+    "webpack-cli": "^5.1.4"
   }
 }
