--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@playground-monorepo/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky install"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~18.0.0",
@@ -28,6 +30,8 @@
     "@angular/cli": "~18.0.0",
     "@angular/compiler-cli": "~18.0.0",
     "@angular/language-service": "~18.0.0",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@nx/devkit": "19.1.0",
     "@nx/esbuild": "19.1.0",
     "@nx/eslint": "19.1.0",
@@ -55,13 +59,17 @@
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-playwright": "^0.15.3",
+    "husky": "^8.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~14.1.0",
     "jsdom": "~22.1.0",
+    "lint-staged": "^15.2.8",
     "nx": "19.1.0",
     "prettier": "^2.6.2",
+    "stylelint": "^16.8.1",
+    "stylelint-config-standard": "^36.0.1",
     "swc-loader": "0.1.15",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
