--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,19 +15,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@playground-monorepo/lib/potion-puzzle/classes": [
-        "lib/potion-puzzle/classes/src/index.ts"
-      ],
-      "@playground-monorepo/lib/potion-puzzle/components": [
-        "lib/potion-puzzle/components/src/index.ts"
-      ],
-      "@playground-monorepo/lib/shared/classes": [
-        "lib/shared/classes/src/index.ts"
-      ],
+      "@playground-monorepo/lib/potion-puzzle/classes": ["lib/potion-puzzle/classes/src/index.ts"],
+      "@playground-monorepo/lib/potion-puzzle/components": ["lib/potion-puzzle/components/src/index.ts"],
+      "@playground-monorepo/lib/shared/classes": ["lib/shared/classes/src/index.ts"],
       "@playground-monorepo/lib/shared/cup": ["lib/shared/cup/src/index.ts"],
-      "@playground-monorepo/lib/shared/types": [
-        "lib/shared/types/src/index.ts"
-      ],
+      "@playground-monorepo/lib/shared/types": ["lib/shared/types/src/index.ts"],
       "@playground-monorepo/lib/shared/utils": ["lib/shared/utils/src/index.ts"]
     }
   },
